fixwed up some spacing

--- a/css/index.css
+++ b/css/index.css
@@ -282,7 +282,7 @@ body {
 }
 .container {
   max-width: 850px;
-  width: 90%;
+  width: 100%;
   margin: 0 auto;
 }
 .img-desktop {
@@ -358,19 +358,19 @@ header .menu a:hover {
   opacity: 0.95;
 }
 .main-img {
-  background: url(../img/home/home-jumbotron.png) no-repeat center bottom;
-  background-size: cover;
   width: 100%;
   max-width: 1024px;
-  height: 70%;
+  height: 60%;
   position: relative;
   margin: 0 auto;
 }
 @media (max-width:500px) {
   .main-img {
-    background: url(../img/home/home-mobile-jumbotron.png) no-repeat center bottom;
-    background-size: cover;
     max-height: 260px;
+    position: relative;
+    width: 100%;
+    margin: 0 auto;
+    margin-bottom: 35%;
   }
 }
 .main-img h1 {
@@ -408,6 +408,7 @@ header .menu a:hover {
     flex-wrap: wrap;
     flex-direction: column;
     align-items: center;
+    width: 90%;
   }
 }
 .home .section {
@@ -422,6 +423,7 @@ header .menu a:hover {
     flex-wrap: wrap;
     flex-direction: column;
     align-items: center;
+    width: 90%;
   }
 }
 .home .box {
@@ -429,6 +431,12 @@ header .menu a:hover {
   flex-direction: column;
   margin: 50px 0;
   width: 48%;
+}
+@media (max-width:500px) {
+  .home .box {
+    width: 100%;
+    margin: 25px 0;
+  }
 }
 .home .box h2 {
   font-size: 2.4rem;
@@ -514,8 +522,22 @@ header .menu a:hover {
 .home .bottom-section .projects .projects-img .left-side {
   left: 0;
 }
+@media (max-width:500px) {
+  .home .bottom-section .projects .projects-img .left-side {
+    width: 90%;
+    left: 5%;
+    margin-top: 10%;
+  }
+}
 .home .bottom-section .projects .projects-img .right-side {
   right: 0;
+}
+@media (max-width:500px) {
+  .home .bottom-section .projects .projects-img .right-side {
+    width: 90%;
+    left: 5%;
+    margin-top: 10%;
+  }
 }
 .home .bottom-section .projects .text {
   width: 53%;
@@ -529,21 +551,11 @@ header .menu a:hover {
   display: flex;
   flex-direction: column;
   align-items: bottom;
-  background: url(../img/services/services-jumbotron.png) no-repeat center bottom;
-  background-size: cover;
   width: 100%;
-  max-width: 1024px;
   height: 100%;
   max-height: 250px;
   margin: 0 auto;
   position: relative;
-}
-@media (max-width:500px) {
-  .main-img-servives {
-    background: url(../img/services/services-mobile-jumbotron.png) no-repeat center bottom;
-    background-size: cover;
-    max-height: 260px;
-  }
 }
 .main-img-servives h1 {
   position: absolute;
@@ -554,13 +566,6 @@ header .menu a:hover {
   line-height: 7.5rem;
   font-weight: bold;
   color: white;
-}
-@media (max-width:500px) {
-  .main-img-servives h1 {
-    left: 5%;
-    font-size: 3.6rem;
-    line-height: 4.4rem;
-  }
 }
 .services {
   font-size: 1.6rem;
@@ -631,7 +636,6 @@ header .menu a:hover {
 }
 footer {
   width: 100%;
-  max-width: 1024px;
   margin: 0 auto;
   background: #828282;
   color: #ffffff;
@@ -641,6 +645,7 @@ footer .container {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  width: 90%;
 }
 @media (max-width:500px) {
   footer .container {
@@ -701,7 +706,7 @@ footer .container .copyright {
 }
 @media (max-width:500px) {
   footer .container .copyright {
-    width: 90%;
+    width: 100%;
     text-align: left;
   }
 }
