--- a/less/footer.less
+++ b/less/footer.less
@@ -1,39 +1,35 @@
 footer {
     width: 100%;
-	max-width: 1024px;
 	margin: 0 auto;
 	background: #828282;
 	color: #ffffff;
     padding: 60px 0 10px 0;
-
-    
-    
    
-     .container {
+
+    .container {
         display: flex;
 		flex-wrap: wrap;
         justify-content: space-between;
+        width: 90%;
 
         @media (@mobile) {
             left: 5%;
             font-size: 3.6rem;
             line-height: 4.4rem;
             flex-direction: column;
-	        align-items: left;
+            align-items: left;
+            
         }
         
         
-        
-        
-		.email {
+        .email {
             width: 39%;
             @media (@mobile) {
                 width:100%;
             }
             
             
- 		   
-        input {
+ 		input {
 			font-size: 1.6rem;
 			line-height: 43px;
 			margin-top: 10px;
@@ -57,8 +53,6 @@ footer {
 			display: flex;
             justify-content: space-between;
 
-           
-
             @media (@mobile) {
 				margin-top: 0px;
 				flex-direction: column;
@@ -70,14 +64,11 @@ footer {
                 }
             }
            
-            
-			
- 			p {
+            p {
 				font-size: 1.4rem;
 				line-height: 2.6rem;
             }
         }
-        
         
         .copyright {
 			width: 100%;
@@ -87,19 +78,16 @@ footer {
             margin-top: 30px;
 
             @media (@mobile) {
-				width: 90%;
+				width: 100%;
 				text-align: left;
 			}
-           
-            
         }
-            
     }
 
 h4 {
     font-size: 2rem;
     font-weight: bold;
     line-height: 2.6rem;
-}
+    }
 }
 
