--- a/less/global.less
+++ b/less/global.less
@@ -10,7 +10,7 @@
 }
  .container {
 	max-width: 850px;
-	width: 90%;
+	width: 100%;
 	margin: 0 auto;
 }
  .img-desktop {
@@ -29,3 +29,8 @@
 	}
  	
 }
+
+
+
+ 	
+
