--- a/less/homepage.less
+++ b/less/homepage.less
@@ -1,22 +1,20 @@
 .main-img {
-    background: url(../img/home/home-jumbotron.png) no-repeat center bottom;
-	background-size: cover;
 	width: 100%;
 	max-width: 1024px;
-	height: 70%;
+	height: 60%;
 	position: relative;
     margin: 0 auto; 
 
+    
     @media (@mobile) {
-        background: url(../img/home/home-mobile-jumbotron.png) no-repeat center
-			bottom;
-		background-size: cover;
-		max-height: 260px;
+        max-height: 260px;
+        position: relative;
+        width: 100%;
+        margin: 0 auto;
+        margin-bottom: 35%;
+       
 	}
     
-    
-
-
 h1 {
     position: absolute;
     bottom: 8%;
@@ -32,8 +30,7 @@ h1 {
         font-size: 3.6rem;
         line-height: 4.4rem;
     }
-    
-}
+  }
 }
 
 .home {
@@ -54,13 +51,8 @@ h1 {
             flex-wrap: wrap;
             flex-direction: column;
             align-items: center;
+            width: 90%;
           } 
-
-       
-        
-        
-        
-		
     }
     
     .section {
@@ -74,27 +66,28 @@ h1 {
             flex-wrap: wrap;
             flex-direction: column;
             align-items: center;
+            width: 90%;
           } 
         
-		
-    }
+	}
     .box {
         display: flex;
 		flex-direction: column;
 		margin: 50px 0;
         width: 48%;
+        @media (@mobile) {
+            width: 100%;
+            margin: 25px 0;
+          } 
        
         
         
-        
-
-
     h2 {
         font-size: 2.4rem;
         font-weight: bold;
         color: #222222;
-        
 
+       
     }
      p {
         margin: 20px 0 25px 0;
@@ -134,9 +127,7 @@ h1 {
         margin: 55px 0 40px 0;
     }
     
-   
-    
-    h2 {
+   h2 {
         font-size: 2.4rem;
         font-weight: bold;
         color: #222222;
@@ -156,8 +147,6 @@ h1 {
         margin: 0 auto 40px auto;
     }
 
-    
-    
     .projects-img {
         position: relative;
 		display: flex;
@@ -185,14 +174,22 @@ h1 {
 
     .left-side {
         left: 0; 
-        
+        @media (@mobile) {
+            width:90%;
+            left: 5%;
+            margin-top: 10%;
+        }
     }
 
     .right-side {
         right: 0;
-       
+        @media (@mobile) {
+            width:90%;
+            left: 5%;
+            margin-top: 10%;
         }
     }
+}
 
 
 .text {
@@ -203,9 +200,9 @@ h1 {
     p{
         font-size: 1.8rem;
         margin-bottom: 25px;  
-    }
-}
-}
-}
+     }
+   }
+  }
+ }
 }
 
