--- a/less/services.less
+++ b/less/services.less
@@ -2,22 +2,13 @@
     display: flex;
 	flex-direction: column;
     align-items: bottom; 
-    background: url(../img/services/services-jumbotron.png) no-repeat center
-		bottom;
-	background-size: cover;
     width: 100%;
-	max-width: 1024px;
 	height: 100%;
 	max-height: 250px;
 	margin: 0 auto;
     position: relative;
 
-    @media (@mobile) {
-		background: url(../img/services/services-mobile-jumbotron.png) no-repeat
-			center bottom;
-		background-size: cover;
-		max-height: 260px;
-	}
+    
     
     h1 {
         position: absolute;
@@ -28,12 +19,6 @@
 		line-height: 7.5rem;
 		font-weight: bold;
         color: white; 
-        
-        @media (@mobile) {
-			left: 5%;
-			font-size: 3.6rem;
-			line-height: 4.4rem;
-		}
     }
 }
 
